@@ -233,6 +233,7 @@ Version 1.5
  - Add Zipato PSR03-1B.EU Keyfob 5 Remote (Nechry)
  - Add Fibaro FGR223 Roller Shutter Controller 3 (Nechry)
  - Add commented config entry  for Neo coolcam Battery Powered PIR Sensor (Nechry)
+ - Add SmartLock Idlock 150 from sveip  (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
